commit redo